# Corsair_Class_Code

./: .gitignore  .pre-commit-config.yaml  README.md  index.html
backend/: pyproject.toml  requirements.txt
backend/container_setup/django/: pyvenv.cfg
backend/container_setup/petshop_proj/: db.sqlite3
backend/container_setup/petshop_proj/petshop_proj/: asgi.py  urls.py
backend/container_setup/petshop_proj/petsowners_app/: apps.py
backend/container_setup/retired_school_db/: Dockerfile  run.sh
backend/container_setup/school_proj/: Dockerfile  compose.yaml  requirements.txt  run.sh
backend/container_setup/school_proj/school_proj/: asgi.py  settings.py  urls.py  wsgi.py
backend/container_setup/school_proj/student_app/: admin.py  converter.py  models.py  serializers.py  tests.py  utilities.py  validator.py  views.py
backend/container_setup/school_proj/tests/: test_models.py
backend/demo_container/demo_db/: Dockerfile  run.sh
backend/demo_container/demo_proj/: Dockerfile  run.sh
backend/demo_container/django/: pyvenv.cfg
backend/dog-example-db/: create_schema.sql
backend/dog-example/data/: dog_data.csv
backend/gemini_dj_server/: compose.yaml
backend/petshop_proj/: Dockerfile  compose.yaml  manage.py
backend/petshop_proj/petshop_proj/: settings.py  wsgi.py
backend/petshop_proj/petsowners_app/: models.py
backend/school_proj/: Dockerfile  run.sh
backend/school_proj/student_app/: serializers.py  urls.py
backend/school_proj/tests/: test_responses.py
backend/school_proj/tests/fixtures/: grades.json
backend/school_proj/user_app/: models.py
(+41 files in other folders)
