[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.11.1",
    "django==6.0.3",
    "google-genai>=1.70.0",
    "psycopg==3.3.3",
    "psycopg-binary==3.3.3",
    "python-dotenv>=1.2.2",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
]
